--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,585</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">33,852</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tutorialsninja.register.TC_RF_026</td><td><a href="#m0">verifyUIOfRegisterAccountPage</a></td><td rowspan="1">1733480530167</td><td rowspan="1">5541</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tutorialsninja.register.TC_RF_027</td><td><a href="#m0">verifyRegisteringAccountInDifferentTestEnvironments</a></td><td rowspan="3">1733491775050</td><td rowspan="3">15396</td></tr><tr class="passedeven"><td><a href="#m1">verifyRegisteringAccountInDifferentTestEnvironments</a></td></tr><tr class="passedeven"><td><a href="#m2">verifyRegisteringAccountInDifferentTestEnvironments</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tutorialsninja.register.TC_RF_026#verifyUIOfRegisterAccountPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tutorialsninja.register.TC_RF_027#verifyRegisteringAccountInDifferentTestEnvironments</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>edge</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tutorialsninja.register.TC_RF_027#verifyRegisteringAccountInDifferentTestEnvironments</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tutorialsninja.register.TC_RF_027#verifyRegisteringAccountInDifferentTestEnvironments</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>firefox</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
