--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\arunm\AppData\Local\Temp\testng-eclipse--1586211974\testng-customsuite.xml</span>
+                    <span>C:\Users\arunm\AppData\Local\Temp\testng-eclipse--1898519608\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_026" class="method navigator-link" hash-for-method="verifyUIOfRegisterAccountPage">verifyUIOfRegisterAccountPage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_027" class="method navigator-link" hash-for-method="verifyRegisteringAccountInDifferentTestEnvironments(edge)">verifyRegisteringAccountInDifferentTestEnvironments(edge)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_027" class="method navigator-link" hash-for-method="verifyRegisteringAccountInDifferentTestEnvironments(chrome)">verifyRegisteringAccountInDifferentTestEnvironments(chrome)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.register.TC_RF_027" class="method navigator-link" hash-for-method="verifyRegisteringAccountInDifferentTestEnvironments(firefox)">verifyRegisteringAccountInDifferentTestEnvironments(firefox)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tutorialsninja.register.TC_RF_026</span>
+              <span class="class-name">tutorialsninja.register.TC_RF_027</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyUIOfRegisterAccountPage">
-                  </a> <!-- verifyUIOfRegisterAccountPage -->
-                  <span class="method-name">verifyUIOfRegisterAccountPage</span>
+                  <a name="verifyRegisteringAccountInDifferentTestEnvironments(edge)">
+                  </a> <!-- verifyRegisteringAccountInDifferentTestEnvironments(edge) -->
+                  <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments</span>
+                  <span class="parameters">(edge)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyRegisteringAccountInDifferentTestEnvironments(chrome)">
+                  </a> <!-- verifyRegisteringAccountInDifferentTestEnvironments(chrome) -->
+                  <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments</span>
+                  <span class="parameters">(chrome)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyRegisteringAccountInDifferentTestEnvironments(firefox)">
+                  </a> <!-- verifyRegisteringAccountInDifferentTestEnvironments(firefox) -->
+                  <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments</span>
+                  <span class="parameters">(firefox)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\arunm\AppData\Local\Temp\testng-eclipse--1586211974\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\arunm\AppData\Local\Temp\testng-eclipse--1898519608\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tutorialsninja.register.TC_RF_026&quot;/&gt;
+      &lt;class name=&quot;tutorialsninja.register.TC_RF_027&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyUIOfRegisterAccountPage')
-data.setCell(0, 2, 'tutorialsninja.register.TC_RF_026')
-data.setCell(0, 3, 5541);
+data.setCell(0, 1, 'verifyRegisteringAccountInDifferentTestEnvironments')
+data.setCell(0, 2, 'tutorialsninja.register.TC_RF_027')
+data.setCell(0, 3, 15396);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyRegisteringAccountInDifferentTestEnvironments')
+data.setCell(1, 2, 'tutorialsninja.register.TC_RF_027')
+data.setCell(1, 3, 10981);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyRegisteringAccountInDifferentTestEnvironments')
+data.setCell(2, 2, 'tutorialsninja.register.TC_RF_027')
+data.setCell(2, 3, 7408);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,10 +255,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tutorialsninja.register.TC_RF_026</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tutorialsninja.register.TC_RF_027</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">verifyUIOfRegisterAccountPage</span>
+                <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments(chrome)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments(firefox)</span>
+                <span class="method-start">7413 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyRegisteringAccountInDifferentTestEnvironments(edge)</span>
+                <span class="method-start">18395 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
