Search Test 6 completed

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\arunm\AppData\Local\Temp\testng-eclipse-741802881\testng-customsuite.xml</span>
+                    <span>C:\Users\arunm\AppData\Local\Temp\testng-eclipse-1002372352\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Logout" class="method navigator-link" hash-for-method="verifyLoggingOutUsingMyAccountDropMenu">verifyLoggingOutUsingMyAccountDropMenu</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchAfterLogin">verifySearchAfterLogin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchFieldsPlaceholders">verifySearchFieldsPlaceholders</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchResultingInMultipleProducts">verifySearchResultingInMultipleProducts</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchWithNonExistingProduct">verifySearchWithNonExistingProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchWithValidProduct">verifySearchWithValidProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tutorialsninja.tests.Search" class="method navigator-link" hash-for-method="verifySearchWithoutEnteringAnyProduct">verifySearchWithoutEnteringAnyProduct</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +146,49 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tutorialsninja.tests.Logout</span>
+              <span class="class-name">tutorialsninja.tests.Search</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoggingOutUsingMyAccountDropMenu">
-                  </a> <!-- verifyLoggingOutUsingMyAccountDropMenu -->
-                  <span class="method-name">verifyLoggingOutUsingMyAccountDropMenu</span>
+                  <a name="verifySearchAfterLogin">
+                  </a> <!-- verifySearchAfterLogin -->
+                  <span class="method-name">verifySearchAfterLogin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySearchFieldsPlaceholders">
+                  </a> <!-- verifySearchFieldsPlaceholders -->
+                  <span class="method-name">verifySearchFieldsPlaceholders</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySearchResultingInMultipleProducts">
+                  </a> <!-- verifySearchResultingInMultipleProducts -->
+                  <span class="method-name">verifySearchResultingInMultipleProducts</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySearchWithNonExistingProduct">
+                  </a> <!-- verifySearchWithNonExistingProduct -->
+                  <span class="method-name">verifySearchWithNonExistingProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySearchWithValidProduct">
+                  </a> <!-- verifySearchWithValidProduct -->
+                  <span class="method-name">verifySearchWithValidProduct</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySearchWithoutEnteringAnyProduct">
+                  </a> <!-- verifySearchWithoutEnteringAnyProduct -->
+                  <span class="method-name">verifySearchWithoutEnteringAnyProduct</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +196,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\arunm\AppData\Local\Temp\testng-eclipse-741802881\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\arunm\AppData\Local\Temp\testng-eclipse-1002372352\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +205,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tutorialsninja.tests.Logout&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;verifyLoggingOutUsingMyAccountDropMenu&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tutorialsninja.tests.Logout --&gt;
+      &lt;class name=&quot;tutorialsninja.tests.Search&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +245,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoggingOutUsingMyAccountDropMenu')
-data.setCell(0, 2, 'tutorialsninja.tests.Logout')
-data.setCell(0, 3, 3966);
+data.setCell(0, 1, 'verifySearchAfterLogin')
+data.setCell(0, 2, 'tutorialsninja.tests.Search')
+data.setCell(0, 3, 2589);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifySearchWithNonExistingProduct')
+data.setCell(1, 2, 'tutorialsninja.tests.Search')
+data.setCell(1, 3, 2225);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifySearchWithoutEnteringAnyProduct')
+data.setCell(2, 2, 'tutorialsninja.tests.Search')
+data.setCell(2, 3, 2028);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifySearchWithValidProduct')
+data.setCell(3, 2, 'tutorialsninja.tests.Search')
+data.setCell(3, 3, 1963);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifySearchFieldsPlaceholders')
+data.setCell(4, 2, 'tutorialsninja.tests.Search')
+data.setCell(4, 3, 1605);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifySearchResultingInMultipleProducts')
+data.setCell(5, 2, 'tutorialsninja.tests.Search')
+data.setCell(5, 3, 706);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,18 +300,78 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tutorialsninja.tests.Logout</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tutorialsninja.tests.Search</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyLoggingOutUsingMyAccountDropMenu</span>
-                <span class="method-start">9070 ms</span>
+                <span class="method-name">verifySearchWithValidProduct</span>
+                <span class="method-start">2914 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13050 ms</span>
+                <span class="method-start">4880 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">5114 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySearchWithNonExistingProduct</span>
+                <span class="method-start">7222 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">9448 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">9645 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySearchWithoutEnteringAnyProduct</span>
+                <span class="method-start">11621 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">13650 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">13878 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySearchAfterLogin</span>
+                <span class="method-start">16830 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">19420 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">19630 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySearchResultingInMultipleProducts</span>
+                <span class="method-start">22776 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">23485 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">23767 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySearchFieldsPlaceholders</span>
+                <span class="method-start">25897 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">27508 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
