--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,511</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,781</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tutorialsninja.tests.Logout</td><td><a href="#m0">verifyLoggingOutUsingMyAccountDropMenu</a></td><td rowspan="1">1734697637503</td><td rowspan="1">3966</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">tutorialsninja.tests.Search</td><td><a href="#m0">verifySearchAfterLogin</a></td><td rowspan="1">1735070626825</td><td rowspan="1">2589</td></tr><tr class="passedeven"><td><a href="#m1">verifySearchFieldsPlaceholders</a></td><td rowspan="1">1735070635892</td><td rowspan="1">1605</td></tr><tr class="passedeven"><td><a href="#m2">verifySearchResultingInMultipleProducts</a></td><td rowspan="1">1735070632771</td><td rowspan="1">706</td></tr><tr class="passedeven"><td><a href="#m3">verifySearchWithNonExistingProduct</a></td><td rowspan="1">1735070617217</td><td rowspan="1">2225</td></tr><tr class="passedeven"><td><a href="#m4">verifySearchWithValidProduct</a></td><td rowspan="1">1735070612909</td><td rowspan="1">1963</td></tr><tr class="passedeven"><td><a href="#m5">verifySearchWithoutEnteringAnyProduct</a></td><td rowspan="1">1735070621616</td><td rowspan="1">2028</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tutorialsninja.tests.Logout#verifyLoggingOutUsingMyAccountDropMenu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tutorialsninja.tests.Search#verifySearchAfterLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tutorialsninja.tests.Search#verifySearchFieldsPlaceholders</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tutorialsninja.tests.Search#verifySearchResultingInMultipleProducts</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tutorialsninja.tests.Search#verifySearchWithNonExistingProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">tutorialsninja.tests.Search#verifySearchWithValidProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">tutorialsninja.tests.Search#verifySearchWithoutEnteringAnyProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
